# moveit-

./: README.md  moveit安装及机械臂建模.txt
my_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
my_arm_config/config/: display.rviz  initial_positions.yaml  joint_limits.yaml  move_group.yaml  moveit_controllers.yaml  my_arm_with_gripper.ros2_control.xacro  my_arm_with_gripper.srdf  my_arm_with_gripper.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml
my_arm_config/launch/: demo.launch.py  display.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
my_arm_description/: CMakeLists.txt  package.xml
my_arm_description/urdf/: my_arm.urdf  my_arm_with_gripper.urdf  my_ur5e.urdf
